--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -1,4 +1,37 @@
 .realtors{
     background-color: $color-secondary;
     grid-column: col-start 7 / full-end;
+    padding:3rem;
+
+    display: grid;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
+    grid-row-gap: 2rem;
+
+    &__list{
+        display: grid;
+        grid-template-columns: -webkit-min-content -webkit-max-content ;
+        grid-template-columns: min-content max-content ;
+        grid-column-gap: 2rem;
+        grid-row-gap: 5vh;
+        align-items: center;
+
+    }
+
+    &__img {
+        width: 7rem;
+        border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+        display: block;
+    }
+
+    &__sold{
+        text-transform: uppercase;
+        color: $color-grey-light-2;
+        margin-top: -3px;
+    }
 }
