--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -14,6 +14,13 @@ $color-grey-dark-2: #6D5D4B;
 $font-primary: 'Nunito', sans-serif;
 $font-display: 'Josefin Sans', sans-serif;
 
+
+// RESPONSIVE BREAKPOINTS
+$bp-largest: 75em;        //1200px 
+$bp-large: 62.5em;       //1000px  1000/16=62.5em
+$bp-medium: 50em;        //800px 
+$bp-small: 37.5em;      //600px 
+
 *,
 *::before,
 *::after{
@@ -25,6 +32,10 @@ $font-display: 'Josefin Sans', sans-serif;
 html{
     box-sizing: border-box;
     font-size: 62.5%;  //10px/16x = 62.5%  --> 1rem =10px
+
+    @media only screen and (max-width: $bp-largest) {
+        font-size: 50%;
+    }
 }
 
 body{
@@ -42,4 +53,24 @@ body{
     [center-start] repeat(8, [col-start] minmax(-webkit-min-content, 14rem) [col-end]) [center-end] minmax(6rem ,1fr) [full-end];
     grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) 
     [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem ,1fr) [full-end];  
+
+
+    @media only screen and (max-width: $bp-large) {
+        grid-template-rows: 6rem 80vh -webkit-min-content 40vw repeat(3, -webkit-min-content);
+        grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
+        grid-template-columns: [full-start] minmax(6rem, 1fr)[center-start] 
+        repeat(8, [col-start] minmax(-webkit-min-content, 14rem) [col-end]) 
+        [center-end] minmax(6rem ,1fr) [full-end];
+        grid-template-columns: [full-start] minmax(6rem, 1fr)[center-start] 
+        repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) 
+        [center-end] minmax(6rem ,1fr) [full-end];  
+    }
+
+    @media only screen and (max-width: $bp-medium) {
+        // grid-template-rows: 6rem 100vh -webkit-min-content -webkit-min-content -webkit-min-content repeat(3, -webkit-min-content);
+        // grid-template-rows: 6rem 100vh min-content min-content min-content repeat(3, min-content);
+       grid-template-rows: 6rem calc(100vh - 6rem);
+    }
+
+    
 }
