--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -9,12 +9,20 @@
     padding-top: 4rem;
 
     display: grid;
-    grid-template-rows: 1fr -webkit-min-content 6rem 1fr;
-    grid-template-rows: 1fr min-content 6rem 1fr;
-    grid-template-columns: -webkit-max-content;
-    grid-template-columns: max-content;
+    grid-template-rows: 1fr -webkit-min-content minmax(6rem , -webkit-min-content 1fr);
+    grid-template-rows: 1fr min-content minmax(6rem , min-content 1fr);
+    grid-template-columns: minmax(-webkit-min-content, -webkit-max-content);
+    grid-template-columns: minmax(min-content, max-content);
     grid-row-gap: 1.5rem;
     justify-content:center ;
+
+    @media only screen and (max-width: $bp-medium) {
+        grid-column:  1 / -1;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+        padding: 5rem;
+    }
 
 
     &__logo{
@@ -51,8 +59,10 @@
         grid-template-columns: repeat(4, 1fr);
         grid-column-gap: 3rem;
         justify-items: center;
+        align-items: center;
         img{
-            height: 2.5rem;
+            max-height: 2.5rem;
+            max-width: 100%;
             filter: brightness(70%);
             -webkit-filter: brightness(70%);
 }
