--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -9,6 +9,11 @@
     justify-items: center;
     grid-row-gap: 2rem;
 
+    
+    @media only screen and (max-width: $bp-medium) {
+        grid-column:  1 / -1;
+    }
+
     &__list{
         display: grid;
         grid-template-columns: -webkit-min-content -webkit-max-content ;
@@ -16,6 +21,18 @@
         grid-column-gap: 2rem;
         grid-row-gap: 5vh;
         align-items: center;
+
+        
+    @media only screen and (max-width: $bp-medium) {
+       grid-template-columns: repeat(3, -webkit-min-content -webkit-max-content) ;
+       grid-template-columns: repeat(3, min-content max-content) ;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+        grid-template-columns: -webkit-min-content -webkit-max-content ;
+        grid-template-columns: min-content max-content ;
+        padding: 5rem;
+    }
 
     }
 
