--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -5,6 +5,13 @@
 
     display: flex;
     justify-content: center;
+
+    @media only screen and (max-width: $bp-large) {
+        grid-column: 1 / -1;
+        grid-row: 1 / 2;
+        justify-content: flex-end;
+        align-items: center;
+    }
 }
 .nav-btn{
     border: none;
@@ -31,4 +38,12 @@
     &::before{ transform:translateY(-1.5rem) ; -webkit-transform:translateY(-1.5rem) ; -moz-transform:translateY(-1.5rem) ; -ms-transform:translateY(-1.5rem) ; -o-transform:translateY(-1.5rem) ; }
     &::after{ transform:translateY(1.3rem) ; -webkit-transform:translateY(1.3rem) ; -moz-transform:translateY(1.3rem) ; -ms-transform:translateY(1.3rem) ; -o-transform:translateY(1.3rem) ; }
 
+    @media only screen and (max-width: $bp-large) {
+        margin-top: 0;
+        margin-right: 3rem;
+
+        &::before{ transform:translateY(-1.2rem) ; -webkit-transform:translateY(-1.2rem) ; -moz-transform:translateY(-1.2rem) ; -ms-transform:translateY(-1.2rem) ; -o-transform:translateY(-1.2rem) ; }
+        &::after{ transform:translateY(1rem) ; -webkit-transform:translateY(1rem) ; -moz-transform:translateY(1rem) ; -ms-transform:translateY(1rem) ; -o-transform:translateY(1rem) ; }
+
+    }
 }
